<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/color_menu"
        android:icon="@drawable/color"
        app:showAsAction="always"
        android:title="@string/color" />
    <item
        android:id="@+id/size_menu"
        android:icon="@drawable/size"
        app:showAsAction="always"
        android:title="@string/brush_size"/>
    <item
        android:id="@+id/erase_menu"
        android:icon="@drawable/erase"
        app:showAsAction="always"
        android:title="@string/erase"/>
    <item
        android:id="@+id/undo_menu"
        app:showAsAction="ifRoom"
        android:title="@string/undo"/>
    <item
        android:id="@+id/redo_menu"
        app:showAsAction="ifRoom"
        android:title="@string/redo"/>
    <item
        android:id="@+id/clear_all_menu"
        android:icon="@drawable/clear_all"
        app:showAsAction="ifRoom"
        android:title="@string/clear_all"/>
    <item
        android:id="@+id/normal_brush_menu"
        android:icon="@drawable/size"
        app:showAsAction="ifRoom"
        android:title="@string/normal"/>
    <item
        android:id="@+id/emboss_menu"
        android:icon="@drawable/emboss"
        app:showAsAction="ifRoom"
        android:title="@string/emboss"/>
    <item
        android:id="@+id/blur_menu"
        android:icon="@drawable/blur"
        app:showAsAction="ifRoom"
        android:title="@string/blur"/>
    <item
        android:id="@+id/save_menu"
        android:icon="@drawable/save"
        app:showAsAction="ifRoom"
        android:title="@string/save"/>
    <item
        android:id="@+id/share_menu"
        android:icon="@drawable/share"
        app:showAsAction="ifRoom"
        android:title="@string/share"/>
    <item
        android:id="@+id/about_menu"
        android:icon="@drawable/about"
        app:showAsAction="ifRoom"
        android:title="@string/about"/>

</menu>